--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
     "moment": "^2.29.3",
+    "ngx-papaparse": "^5.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
